<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bookshelf" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search_books" />
        <item android:title="@string/menu_section_support">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/abc_vector_test"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/abc_vector_test"
                    android:title="@string/menu_help" />
                <item
                    android:id="@+id/nav_privacy"
                    android:icon="@drawable/abc_vector_test"
                    android:title="@string/menu_privacy" />
            </menu>
        </item>
    </group>
</menu>