<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hfad.rookandlochbooks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.hfad.rookandlochbooks.ui.bookshelf.BookshelfFragment"
        android:label="@string/menu_bookshelf"
        tools:layout="@layout/fragment_bookshelf" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.hfad.rookandlochbooks.ui.search.SearchFragment"
        android:label="@string/menu_search_books"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.hfad.rookandlochbooks.ui.support.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_privacy"
        android:name="com.hfad.rookandlochbooks.ui.support.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.hfad.rookandlochbooks.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>