<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchContraint"
    tools:context=".ui.search.SearchFragment">

    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/scan_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:autoSizeTextType="uniform"
        android:text="Title:"
        android:textAlignment="viewEnd"
        android:textSize="15sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/searchTitleField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanBarcode" />

    <EditText
        android:id="@+id/searchTitleField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/hint_title"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/searchTitle" />

    <TextView
        android:id="@+id/searchAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:autoSizeTextType="uniform"
        android:text="Author:"
        android:textAlignment="viewEnd"
        android:textSize="15sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/searchAuthorField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />


    <EditText
        android:id="@+id/searchAuthorField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/hint_author"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/searchAuthor" />

    <TextView
        android:id="@+id/searchGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:autoSizeTextType="uniform"
        android:text="Genre:"
        android:textAlignment="viewEnd"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/searchGenreField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchAuthor" />

    <EditText
        android:id="@+id/searchGenreField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/hint_genre"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/searchGenre" />

    <Button
        android:id="@+id/btnSearchDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/search_by_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchGenreField" />


</androidx.constraintlayout.widget.ConstraintLayout>